# Adept-2

./: .gitignore  CMakeLists.txt
adept/: CMakeLists.txt
